# klingon-cloaking-device

./: .dockerignore  Cargo.toml  Dockerfile  README.md  entrypoint.sh
.beader/: .gitignore  meta.yaml
.github/workflows/: ci-main.yaml  klingon-cloaking-device.yaml  release-cli.yaml  release-image-chart.yaml
api-rs/: Cargo.toml  README.md
api-rs/src/: cloak_watcher.rs  crd.rs  knock.rs  main.rs  netpol.rs  services.rs  state.rs  sweeper.rs  tls.rs  watcher.rs
api-rs/src/listeners/: auth_listener.rs  knock_listener.rs
cli-rs/: Cargo.toml  README.md
cli-rs/src/: main.rs
docs/: ARCHITECTURE.md  diagram_access_approval_process_flow.md  diagram_operator_process_flow.md
helm_chart/: Chart.yaml  README.md  values.yaml
helm_chart/templates/: NOTES.txt  _helpers.tpl  auth-networkpolicy.yaml  certificate.yaml  clusterrole.yaml  clusterrolebinding.yaml  crd.yaml  deployment.yaml  namespace.yaml  networkpolicy.yaml  secret-provider.yaml  secret.yaml  service.yaml  serviceaccount.yaml  tls-secret.yaml
integration-tests/: Cargo.toml
integration-tests/tests/: sweeper.rs
integration-tests/tests/helpers/: mock_k8s.rs  mod.rs  state.rs  tls.rs
integration_test/: README.md  cloakingdevice.yaml  ssh-server.yaml
kcd-proto/: Cargo.toml
kcd-proto/src/: lib.rs
plain_k8s_manifests/: README.md  auth-networkpolicy.yaml  clusterrole.yaml  clusterrolebinding.yaml  crd.yaml  deployment.yaml  namespace.yaml  networkpolicy.yaml  secrets.yaml  service.yaml  serviceaccount.yaml
rust/: Cargo.toml
rust/api-rs/: Cargo.toml
rust/api-rs/src/: cloak_watcher.rs  crd.rs  lib.rs  main.rs  netpol.rs  state.rs  sweeper.rs  tls.rs
rust/api-rs/src/listeners/: auth_listener.rs  health_listener.rs  knock_listener.rs  mod.rs
rust/cli-rs/: Cargo.toml  README.md
rust/cli-rs/src/: config.rs  main.rs
rust/integration-tests/: Cargo.toml
rust/integration-tests/src/: lib.rs
rust/integration-tests/tests/: authorize_flow.rs  crd_watcher.rs  sweeper.rs
rust/integration-tests/tests/helpers/: mock_k8s.rs  state.rs  tls.rs
rust/kcd-proto/: Cargo.toml
rust/kcd-proto/src/: lib.rs
