[package]
name = "integration-tests"
version = "0.0.0-dev"
edition = "2021"
publish = false

[dependencies]
kcd-server = { path = "../api-rs", package = "klingon-cloaking-device-server" }
kcd-proto = { path = "../kcd-proto" }
tokio = { version = "1", features = ["full"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std"] }
tokio-rustls = { version = "0.26" }
kube = { version = "0.98", default-features = false, features = ["client", "rustls-tls"] }
k8s-openapi = { version = "0.24", features = ["v1_32"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower = "0.5"
http = "1"
http-body-util = "0.1"
hyper = "1"
rcgen = "0.13"
tempfile = "3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
arc-swap = "1"
