[package]
name = "klingon-cloaking-device-server"
version.workspace = true
edition.workspace = true

[lib]
name = "kcd_server"
path = "src/lib.rs"

[[bin]]
name = "klingon-cloaking-device-server"
path = "src/main.rs"

[dependencies]
kcd-proto.workspace = true
tokio.workspace = true
rustls.workspace = true
tokio-rustls.workspace = true
rustls-pemfile.workspace = true
kube = { workspace = true, features = ["client", "rustls-tls", "derive", "runtime"] }
k8s-openapi.workspace = true
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
futures.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
subtle.workspace = true
arc-swap.workspace = true

[dev-dependencies]
rcgen.workspace = true
tempfile.workspace = true
